--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "bootstrap": "^3.3.7",
     "jquery": "^3.2.1",
     "requirejs": "^2.3.5",
-    "web3": "^0.19.0"
+    "web3": "^0.19.0",
+    "crypto-js": "^3.1.9"
   }
 }
